[package]
name = "todo"
version = "0.1.0"
authors = ["Tearat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew"}
web-sys = "0.3.55"
getrandom = { version = "0.2", features = ["js"] }
fake = "2.4"
log = "0.4.14"
console_log = { version = "0.2", features = ["color"] }